--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.4.3
-  shared_preferences: ^2.2.2 
+  flutter_riverpod: ^2.6.1
+  shared_preferences: ^2.3.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.14.2
   flutter_test:
     sdk: flutter
 
@@ -52,6 +53,13 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icono_todo.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/icon/icono_todo.png"
+
 flutter:
 
   # The following line ensures that the Material Icons font is
